--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: The Example Website
-author: Armin
-description: A description what this is about goes here.
+author: Here we can say who authored this.
+description: And very breifly what it is about.
