--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: The Example Website
 author: Here we can say who authored this.
-description: And very breifly what it is about.
+description: And very briefly what it is about.
