--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: minima
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
 title: The Example Website
 author: Here we can say who authored this.
 description: And very briefly what it is about.
